Add style to second div

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -4,3 +4,8 @@
     background-color: #f9939f;
     font-family: Verdana, "DejaVu Sans", sans-serif;
 }
+
+#second-element{
+    color: #0000ff;
+    font-size: 36px;
+}
