--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -20,7 +20,7 @@ body {
 .content {
   background: #e3f4ff;
   margin-bottom: 8px;
-  padding: 16px 8px 16px 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
@@ -34,5 +34,5 @@ button {
   border: 1px solid #eee;
   display: block;
   margin: 0 auto;
-  padding: 8px 16px 8px;
+  padding: 8px 24px;
 }
