--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,26 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+}
+
+.left {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: start;
+  gap: 1rem;
+}
+
+.right {
+  display: flex;
+  gap: 16px;
+  flex: 1;
+  justify-content: end;
 }
 
 .profile-image {
@@ -45,4 +65,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 8px;
+  padding: 0;
 }
