--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -15,23 +15,13 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
   padding: 8px;
 }
 
-.left {
+.left, .right {
   display: flex;
-  flex: 1;
   align-items: center;
-  justify-content: start;
   gap: 1rem;
-}
-
-.right {
-  display: flex;
-  gap: 16px;
-  flex: 1;
-  justify-content: end;
 }
 
 .profile-image {
@@ -66,6 +56,7 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  gap: 8px;
+  gap: 1rem;
   padding: 0;
+  margin: 0;
 }
