--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,28 +11,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-}
-
-.section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
+  margin-bottom: 2rem;
 }
 
 .card-wrapper {
   display: flex;
+  justify-content: center;
   gap: 3.25rem;
 }
 
 .card {
-  width: 200px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  text-align: center;
-  gap: 0.5rem;
+  max-width: 200px;
 }
 
 /* do not edit this footer */
