--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -7,13 +7,13 @@ body {
   font-family: Roboto, sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 ul {
   list-style: none;
   display: flex;
   padding: 0;
+  margin: 0;
   gap: 16px;
 }
 
@@ -22,23 +22,24 @@ a {
   color: #3a3a3a;
 }
 
-.header {
+.header,
+.footer {
   display: flex;
   justify-content: space-between;
   padding: 8px;
 }
 
 .content {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
 .footer {
-  background-color: #e9e9e9;
-  display: flex;
-  justify-content: space-between;
-  padding: 8px;
+  background-color: #eeeeee;
 }
 
 img {
@@ -58,5 +59,4 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
-  margin-bottom: 16px;
 }
